--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<title>Coming Soon</title>
+	<title>Jamie and Mario Get Mauied!</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<style type="text/css">body {
   /*background: linear-gradient(90deg, white, gray);*/
