--- a/LetterToOurGuests.html
+++ b/LetterToOurGuests.html
@@ -1,70 +1,22 @@
 <html>
 <head>
 	<title></title>
-	<style type="text/css">body {
-  /*background: linear-gradient(90deg, white, gray);*/
-  background-color: #eee;
-}
-
-body, h1, p {
-  font-family: "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: normal;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
-
-.container {
-  margin-left:  auto;
-  margin-right:  auto;
-  margin-top: 177px;
-  max-width: 1170px;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.row:before, .row:after {
-  display: table;
-  content: " ";
-}
-
-h1 {
-  font-size: 48px;
-  font-weight: 300;
-  margin: 0 0 20px 0;
-}
-
-.lead {
-  font-size: 21px;
-  font-weight: 200;
-  margin-bottom: 20px;
-}
-
-p {
-  margin: 0 0 10px;
-}
-
-a {
-  color: #3282e6;
-  text-decoration: none;
-}
-	</style>
+	<link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
 <h1>Letter To Our Guests</h1>
-
-<table align="center" border="1" cellpadding="1" cellspacing="1" style="width: 100%;">
-	<tbody>
-		<tr>
-			<td><a href="Home.Html">Home</a></td>
-			<td><a href="Itinerary.html">Itinerary</a></td>
-			<td><a href="ThingsToDo.html">Things to do</a></td>
-			<td><a href="PlacesToStay.html">Places to stay</a></td>
-			<td><a href="MeetTheFamily.html">Meet the Family</a></td>
-			<td><a href="ContactInformation.html">Contact Information</a></td>
-			<td><a href="LetterToOurGuests.html">Letter to our guests</a></td>
-		</tr>
-	</tbody>
-</table>
+<div>
+<nav>
+  <ul>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="Itinerary.html">Itinerary</a></li>
+    <li><a href="ThingsToDo.html">Things To Do</a></li>
+    <li><a href="PlacesToStay.html">Places To Stay</a></li>
+    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <li><a href="ContactInformation.html">Contact Information</a></li>
+    <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
+  </ul>
+</nav>
+</div>
 </body>
 </html>
