Redesign to follow invitation forma

--- a/LetterToOurGuests.html
+++ b/LetterToOurGuests.html
@@ -1,10 +1,10 @@
 <html>
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Letter To Our Guests</h1>
 <div>
 <nav>
   <ul>
@@ -12,11 +12,32 @@
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
 </nav>
 </div>
+<br>
+
+<table class="longMidleText" align="center">
+  <tr>
+    <td>
+      <p id="letterText">Mario and I found our paradise when we first visited Maui together in September 2012. </p>
+      <p id="letterText">I vividly remember hugging Mario under the stars on the beloved Wailea walkway, and we shared the clarity that we would one day get married there. </p>
+      <p id="letterText">It took 4 years for us to go on our first date in April 2012, in which our fondness for one another was already established. </p>
+      <p id="letterText">What came next was the realization of the love that we had both always believed in. </p>
+      <p id="letterText">Uniting our love in marriage is something that we want to celebrate with the ones that have supported and loved us from the beginning. </p>
+      <p id="letterText">May 20th is quickly approaching and we could not be more excited! The sacrifices that each of you are making to be there greatly humbles us and touches our hearts deeply. </p>
+      <p id="letterText">Your smiles, hugs and laughter will make this celebration more than perfect!  </p>
+      <p id="letterText">We will see you there! Aloha! </p>
+    </td>
+   </tr>
+   <tr>
+    <td>
+      <img src="images\engagement-small.jpg" />
+    </td>
+   </tr>
+</table>
 </body>
 </html>
