--- a/PlacesToStay.html
+++ b/PlacesToStay.html
@@ -1,11 +1,11 @@
 <html>
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Places To Stay</h1>
 <div>
 <nav>
   <ul>
@@ -13,41 +13,43 @@
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
 </nav>
 </div>
+<br>
 
-<p>Elua Village <a href="http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23" target="_parent">http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23</a></p>
+<table class="longMidleText" align="center">
+  <tr>
+    <td>
+      <p class=textNormal ><b>Elua Village </b><a href="http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23" target="_parent">http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23</a></p>
 
-<p></p>
+      <br>
 
-<p>Booking through VRBO will allow you to work with a rental manager. These are privately owned and there is a variety of units to choose from which allows for a wide price range. Please note that they will be working on some of the units during our stay, which is bringing the cost down for the inconvenience. Both the bride and grooms family will be staying at this property and the pool area will be a great place to get together!</p>
+      <p class=textNormal >Booking through VRBO will allow you to work with a rental manager. These are privately owned and there is a variety of units to choose from which allows for a wide price range. Please note that they will be working on some of the units during our stay, which is bringing the cost down for the inconvenience. Both the bride and grooms family will be staying at this property and the pool area will be a great place to get together!</p>
 
-<p><a href="http://www.airbnb.com/" target="_parent">www.airbnb.com</a></p>
+      <p class=textNormal ><a href="http://www.airbnb.com/" target="_parent">www.airbnb.com</a></p>
+      <p class=textNormal >There are many places to look into in the South Maui area on this website with great options for sharing as well.</p>
 
-<p>There are many places to look into in the South Maui area on this website with great options for sharing as well.</p>
+      <br>
+      <p class=textNormal ><a href="https://secure.fourseasons.com/content/fourseasons/en/booking/your_trip_a.html" target="_parent">https://secure.fourseasons.com/content/fourseasons/en/booking/your_trip_a.html</a></p>
 
-<p></p>
+      <p class=textNormal >Other nearby hotels:</p>
 
-<p><a href="https://secure.fourseasons.com/content/fourseasons/en/booking/your_trip_a.html" target="_parent">https://secure.fourseasons.com/content/fourseasons/en/booking/your_trip_a.html</a></p>
+      <p class=textNormal >The Kealani The fairmont <a href="http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg" target="_parent">http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg</a></p>
 
-<p>Other nearby hotels:</p>
+      <p class=textNormal >The Grand Wailea <a href="http://www.grandwailea.com/" target="_parent">http://www.grandwailea.com/</a></p>
 
-<p>The Kealani The fairmont <a href="http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg" target="_parent">http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg</a></p>
+      <p class=textNormal >Wailea Beach Marriot Resort and Spa <a href="http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/" target="_parent">http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/</a></p>
 
-<p>The Grand Wailea <a href="http://www.grandwailea.com/" target="_parent">http://www.grandwailea.com/</a></p>
+      <br>
 
-<p>Wailea Beach Marriot Resort and Spa <a href="http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/" target="_parent">http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/</a></p>
-
-<p></p>
-
-<p>Wailea Map</p>
-
-<p><a href="http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg" target="_parent">http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg</a></p>
-
-<p></p>
+      <p class=textNormal >Wailea Map</p>
+      <p class=textNormal ><a href="http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg" target="_parent">http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg</a></p>
+ </td>
+</tr>
+</table>
 </body>
 </html>
