--- a/ThingsToDo.html
+++ b/ThingsToDo.html
@@ -1,11 +1,11 @@
 <html>
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Things To Do</h1>
 <div>
 <nav>
   <ul>
@@ -13,11 +13,96 @@
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
 </nav>
 </div>
+<br>
+<table class="longMidleText" align="center" >
+  <tr>
+    <td>
+      <p class=textNormal><b>Seadoos, Surfing, Paddle Board, Helicopter Tours</b></p>
+
+      <p class=textNormal><b>Main Beaches</b>:  *Makena Big and Little Beach,
+      Kaanapali, Kapalua, Lahina, Kihea *Makena Beach is bikeable (mountain bike
+      recommended) from the Wailea area. Makes for a fun adventure but be careful on
+      the main road because there are parts with little shoulder.</p>
+
+      <p class=textNormal><b>Bikes/Mopeds</b>:  Both bicycles and scooters/motorcycles
+      are available, several vendors are located on Maui. Sunrise bike ride down from
+      the volcano, Haleakala… anyone?</p>
+
+      <p class=textNormal><b>Snorkeling</b>:  Various vendors have hour, day and
+      weekly rates (rates will vary). Ah’Hikinu reserve and Maluaka beach have been
+      mentioned as favorite snorkeling locations.  Various half-day trips are
+      available from Ma’alaea to Molokini beginning early in the AM, including breakfast. 
+      These can also include a visit to Turtle Town where you swim with the sea
+      turtlles.</p>
+
+      <p class=textNormal>Pacific Whale Foundation’s cruises are more family friendly Website
+      is <b>www.pacificwhale.org. </b></p>
+
+      <p class=textNormal><b>Mentionable Golf Courses:</b>  Kapalua (888-708-9705), Makena
+      (808-891-4000), Wailea (888-328-MAUI)</p>
+
+      <p class=textNormal> Other courses: Pukilani (windy), Elleair and Kaliki</p>
+
+      <p class=textNormal>           Club Rental:  <a
+      href="http://www.mauiclubrentals.com"><span style='color:windowtext'>www.mauiclubrentals.com</span></a> 
+      offers sets of clubs, delivered and picked-up…steel $25, graphite $30 /day (weekly
+      rates available)</p>
+
+      <p class=textNormal>          Tee Times:  Stand By Golf 808-665-0800 or
+      808-875-8406 is an excellent resource for tee times (owned by the same guy,
+      Dick Lowe, that runs the golf club rental service). Call after 5PM to get
+      reduced pricing for next  day golf. </p>
+
+      <p class=textNormal><b>Tennis</b>:  Public courts are available in Kihei, across
+      the street from the Starbucks. Private courts and lessons in Wailea.</p>
+
+      <p class=textNormal><b>Horseback Riding</b>:  Into Haleakala crater has been
+      recommended</p>
+
+      <p class=textNormal><b>Walking</b>:  Don’t miss out on a jog or walk on the
+      Wailea path. This path will connect you to the main Wailea hotels, including
+      the Four Seasons where the big day is!</p>
+
+      <p class=textNormal><b>Hiking</b>:  Lots available, a recommended one in Lao
+      valley, Kulu lodge, Kulu botanical Garden and Tedeshi Vineyard</p>
+
+      <p class=textNormal><b>Zip-Lining</b>: 3 primary companies</p>
+
+      <p class=textNormal >Skyline Eco-Adventures:&nbsp;Haleakala
+      Tour(slightly more beginners, less exp&nbsp;Regular Price: $95.00*Book Online
+      Price: $85.50*, 1.5-2 hrs) or the Ka'anapali Tour&nbsp;Regular Price: $149.95*Book
+      Online Price: $134.95*3.5-4 hrs-&nbsp;(808) 878-8400, or visit&nbsp;<a
+      href="http://www.zipline.com/"><span style='color:windowtext;text-decoration:
+      none'>www.zipline.com</span></a></p>
+
+      <p class=textNormal >&nbsp;</p>
+
+      <p class=textNormal >Kapalua Resort with their Kapalua Resort's zipline
+      course: </p>
+
+      <p class=textNormal >Kapalua Adventures -&nbsp;808) 665-4386, or
+      visit&nbsp;<a
+      href="http://www.kapalua.com/adventures/on-resort-adventures/mountain-outpost/zip-lines/">www.kapalua.com/adventures/</a>.
+      ($149 4 zip lines 2.5 hrs, $179 5 zip lines 3.5 hrs, $199 5 zip lines + swing 4
+      hrs, $250 7 zip lines 4.5 hrs, $129 sunset zip line 2.5 hrs Weds and Fri
+      5:30-7:30)</p>
+
+      <p class=textNormal >&nbsp;</p>
+
+      <p class=textNormal s>Piiholo Ranch Zipline:&nbsp;(808) 572-1717, or
+      visit&nbsp;<a href="http://piiholozipline.com/">piiholozipline.co</a>m</p>
+
+      <p class=textNormal>2 hr 4 zip line course $140, 3 hr 5 zip line course $190</p>
+
+      <p class=textNormal><i>&nbsp;</i></p>
+ </td>
+  </tr>
+</table>
 </body>
 </html>
