--- a/home.html
+++ b/home.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>Jamie and Mario Get Mauied!</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Jamie and Mario Wedding information.</h1>
-<div>
-<nav>
+    <div>
+  <nav>
   <ul>
     <li><a href="home.html">Home</a></li>
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
-</nav>
+  </nav>
 </div>
-
-<p class="text-center">[site currently under construction]</p>
-
-<p class="lead">hola</p>
+<br>
+<table class="weddingCard" align="center" height="100%">
+  <tr>
+    <td>
+      <p id="formalText">Together with our families</p>
+      <p id="fullName">Jamie Lynn Crockett</p>
+      <p id="formalText">and</p>
+      <p id="fullName">Mario Santiago Guzzi</p>
+      <p id="formalText">Ask you to share in our joy</p>
+      <p id="formalText">as we celebrate the start</p> 
+      <p id="formalText"> of our marriage</p>
+      <p id="formalText"><font size="64">5.20.2015</font></p>
+      <p id="formalText">The evening begins with</p>
+      <p id="formalText">Cocktails at Five O'Clock</p>
+      <p id="formalText">Exchange of vows at sunset</p>
+      <p id="formalText">Followed by</p>
+      <p id="formalText">Eating, Drinking and Dancing</p>
+      <p></p>
+      <p id="fullName"><font size="24"><a href="http://www.fourseasons.com/maui/"> Four Seasons Resort</a></font></p>
+      <p id="formalText">Maui, Hawaii</p>
+    </td>
+    <td>
+     <img src="images\palm-tree.jpg" align="right" /> 
+    </td>
+</tr>
+</table>
 </body>
 </html>
