--- a/ContactInformation.html
+++ b/ContactInformation.html
@@ -1,11 +1,11 @@
 <html>
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title></title>
 <link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Contact Information</h1>
 <div>
 <nav>
   <ul>
@@ -13,13 +13,15 @@
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
 </nav>
 </div>
-
+<br>
+<br>
+<br>
 <p>To get in touch with us:</p>
 
 <p>Jamie Crockett: <a href="mailto:jamiecrockett@hotmail.com">email</a></p>
