--- a/Itinerary.html
+++ b/Itinerary.html
@@ -1,11 +1,11 @@
 <html>
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Itinerary</h1>
 <div>
 <nav>
   <ul>
@@ -13,17 +13,25 @@
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
 </nav>
 </div>
+<br>
 
-<p>May 19th - Sunset Sail</p>
-
-<p>May 20th - Wedding day</p>
-
-<p>May 21st - Pool Party</p>
+<table class="longMidleText" align="center" >
+  <tr>
+    <td>
+      <p>May 19th - Coming soon!</p>
+      <p>May 20th - Wedding day</p>
+      <p>May 21st - Coming Soon!</p>
+    </td>
+    <td>
+      <img src="images\suitcase.jpg" align="right" /> 
+    </td>
+  </tr>
+</table>
 </body>
 </html>
