--- a/MeetTheFamily.html
+++ b/MeetTheFamily.html
@@ -1,10 +1,10 @@
 <html>
 <head>
+   <link href='http://fonts.googleapis.com/css?family=Parisienne|Merriweather&subset=latin,latin-ext' rel='stylesheet' type='text/css'>  
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="layout-styles.css">
 </head>
 <body>
-<h1>Meet The Family</h1>
 <div>
 <nav>
   <ul>
@@ -12,11 +12,14 @@
     <li><a href="Itinerary.html">Itinerary</a></li>
     <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
-    <li><a href="MeetTheFamily.html">Meet The Family</a></li>
+    <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
     <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
   </ul>
 </nav>
 </div>
+<br>
+<br>
+<br>
 </body>
 </html>
