--- a/ContactInformation.html
+++ b/ContactInformation.html
@@ -11,21 +11,25 @@
   <ul>
     <li><a href="home.html">Home</a></li>
     <li><a href="Itinerary.html">Itinerary</a></li>
-    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
+    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
-    <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
+    <li><a href="ContactInformation.html">Contact Information</a></li>
   </ul>
 </nav>
 </div>
 <br>
 <br>
 <br>
-<p>To get in touch with us:</p>
-
-<p>Jamie Crockett: <a href="mailto:jamiecrockett@hotmail.com">email</a></p>
-
-<p>Mario Guzzi: <a href="mailto:marioguzzi@hotmail.com">email</a></p>
+<table class="longMidleText" align="center" >
+  <tr>
+    <td>
+      <p>To get in touch with us:</p>
+      <p>Jamie Crockett: <a href="mailto:jamiecrockett@hotmail.com">email</a></p>
+      <p>Mario Guzzi: <a href="mailto:marioguzzi@hotmail.com">email</a></p>
+    </td>
+  </tr>
+</table>
 </body>
 </html>
