--- a/Itinerary.html
+++ b/Itinerary.html
@@ -11,11 +11,11 @@
   <ul>
     <li><a href="home.html">Home</a></li>
     <li><a href="Itinerary.html">Itinerary</a></li>
-    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
+    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
-    <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
+    <li><a href="ContactInformation.html">Contact Information</a></li>
   </ul>
 </nav>
 </div>
@@ -28,7 +28,7 @@
       <p>May 20th - Wedding day</p>
       <p>May 21st - Coming Soon!</p>
     </td>
-    <td>
+    <td align="center">
       <img src="images\suitcase.jpg" align="right" /> 
     </td>
   </tr>
