--- a/home.html
+++ b/home.html
@@ -13,11 +13,11 @@
   <ul>
     <li><a href="home.html">Home</a></li>
     <li><a href="Itinerary.html">Itinerary</a></li>
-    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
+    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
-    <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
+    <li><a href="ContactInformation.html">Contact Information</a></li>
   </ul>
   </nav>
 </div>
@@ -39,7 +39,7 @@
       <p id="formalText">Followed by</p>
       <p id="formalText">Eating, Drinking and Dancing</p>
       <p></p>
-      <p id="fullName"><font size="24"><a href="http://www.fourseasons.com/maui/"> Four Seasons Resort</a></font></p>
+      <p id="fourSeasonsPretty"><a href="http://www.fourseasons.com/maui/"> Four Seasons Resort</a></p>
       <p id="formalText">Maui, Hawaii</p>
     </td>
     <td>
