--- a/LetterToOurGuests.html
+++ b/LetterToOurGuests.html
@@ -10,11 +10,11 @@
   <ul>
     <li><a href="home.html">Home</a></li>
     <li><a href="Itinerary.html">Itinerary</a></li>
-    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <li><a href="PlacesToStay.html">Places To Stay</a></li>
+    <li><a href="ThingsToDo.html">Things To Do</a></li>
     <!-- <li><a href="MeetTheFamily.html">Meet The Family</a></li> -->
-    <li><a href="ContactInformation.html">Contact Information</a></li>
     <li><a href="LetterToOurGuests.html">Letter To Our Guests</a></li>
+    <li><a href="ContactInformation.html">Contact Information</a></li>
   </ul>
 </nav>
 </div>
@@ -34,7 +34,7 @@
     </td>
    </tr>
    <tr>
-    <td>
+    <td align="center">
       <img src="images\engagement-small.jpg" />
     </td>
    </tr>
