places to stay layout updates

--- a/PlacesToStay.html
+++ b/PlacesToStay.html
@@ -24,30 +24,29 @@
 <table class="longMidleText" align="center">
   <tr>
     <td>
-      <p class=textNormal ><b>Elua Village </b><a href="http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23" target="_parent">http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23</a></p>
-
+      <p class=textNormal><a href="http://www.fourseasons.com/maui/"><b>Four Seasons Resort</b></a></p>
+      <p class=textNormal >This is where the ceremony will take place. The bride and groom will be staying there. There is a 20% discount for guests of the wedding staying here (calle the hotel for details).</p>
       <br>
-
-      <p class=textNormal >Booking through VRBO will allow you to work with a rental manager. These are privately owned and there is a variety of units to choose from which allows for a wide price range. Please note that they will be working on some of the units during our stay, which is bringing the cost down for the inconvenience. Both the bride and grooms family will be staying at this property and the pool area will be a great place to get together!</p>
-
-      <p class=textNormal ><a href="http://www.airbnb.com/" target="_parent">www.airbnb.com</a></p>
+      <p class=textNormal ><a href="http://www.vrbo.com/vacation-rentals/usa/hawaii/maui/south-maui/wailea/elua-village?from-date=2015-05-16&amp;to-date=2015-05-23" target="_parent"><b>Elua Villate</b></a></p>
+      <p class=textNormal >Booking through VRBO will allow you to work with a rental manager. These are privately owned and there is a variety of units to choose from which allows for a wide price range. </p>
+      <p class=textNormal >Please note that they will be working on some of the units during our stay, which is bringing the cost down for the inconvenience. Both the bride and grooms family will be staying at this property and the pool area will be a great place to get together!</p>
+      
+      <br>
+      <p class=textNormal ><a href="http://www.airbnb.com/" target="_parent"><b>AirBnB</b></a></p>
       <p class=textNormal >There are many places to look into in the South Maui area on this website with great options for sharing as well.</p>
-
       <br>
-      <p class=textNormal ><a href="https://secure.fourseasons.com/content/fourseasons/en/booking/your_trip_a.html" target="_parent">https://secure.fourseasons.com/content/fourseasons/en/booking/your_trip_a.html</a></p>
+      <p class=textNormal ><b>Other nearby hotels:</b></p>
 
-      <p class=textNormal >Other nearby hotels:</p>
+      <p class=textNormal ><a href="http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg" target="_parent"> - The Kealani The fairmont</a></p>
 
-      <p class=textNormal >The Kealani The fairmont <a href="http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg" target="_parent">http://www.fairmont.com/kea-lani-maui/?cmpid=google_kea_search-branded_branded-e-revsh&amp;s_kwcid=TC|1025556|the%20fairmont%20kea%20lani%20maui||S|e|39676517942&amp;gclid=CKvOu8bL0MECFUeBfgodHmYAbg</a></p>
+      <p class=textNormal ><a href="http://www.grandwailea.com/" target="_parent"> - The Grand Wailea</a></p>
 
-      <p class=textNormal >The Grand Wailea <a href="http://www.grandwailea.com/" target="_parent">http://www.grandwailea.com/</a></p>
-
-      <p class=textNormal >Wailea Beach Marriot Resort and Spa <a href="http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/" target="_parent">http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/</a></p>
+      <p class=textNormal ><a href="http://www.marriott.com/hotels/travel/hnmmc-wailea-beach-marriott-resort-and-spa/" target="_parent"> - Wailea Beach Marriot Resort and Spa</a></p>
 
       <br>
 
-      <p class=textNormal >Wailea Map</p>
-      <p class=textNormal ><a href="http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg" target="_parent">http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg</a></p>
+      <!-- <p class=textNormal >Wailea Map</p> -->
+      <p class=textNormal ><a href="http://www.mauicondoresorts.com/images/maui-wailea-makena-map.jpg" target="_parent"><b>Wailea Map</b></a></p>
  </td>
 </tr>
 </table>
